mdapipkg/objects/Account_Affiliation__c.object
<CustomObject>
    <fields>
        <fullName>Industry_Sub_Category_3__c</fullName>
        <label>Industry Sub-Category 3</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Industry_Category_3__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accommodation/Hospitality</fullName>
                </value>
                <value>
                    <fullName>Accounting/Bookkeeping/ Payroll Services</fullName>
                </value>
                <value>
                    <fullName>Administrative &amp; Support Services</fullName>
                </value>
                <value>
                    <fullName>Advertising &amp; Related Svcs</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Agriculture/Construct./Mining Machinery</fullName>
                </value>
                <value>
                    <fullName>Air/Rail/Wtr/Truck/Trnst Etc. Trans</fullName>
                </value>
                <value>
                    <fullName>Ambulatory Health Care Svcs</fullName>
                </value>
                <value>
                    <fullName>Amusement</fullName>
                </value>
                <value>
                    <fullName>Animal Food</fullName>
                </value>
                <value>
                    <fullName>Animal Slaughtering &amp; Processing</fullName>
                </value>
                <value>
                    <fullName>Apparel Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Architectural/ Engineering &amp; Related Svc</fullName>
                </value>
                <value>
                    <fullName>Architectural &amp; Structural Metals</fullName>
                </value>
                <value>
                    <fullName>Arts/ Entertainment &amp; Recreation</fullName>
                </value>
                <value>
                    <fullName>Aviation</fullName>
                </value>
                <value>
                    <fullName>Bakeries &amp; Tortilla</fullName>
                </value>
                <value>
                    <fullName>Basic Chemical</fullName>
                </value>
                <value>
                    <fullName>Beer/ Wine&amp; Distil Alcoholic Beverages</fullName>
                </value>
                <value>
                    <fullName>Beverage &amp; Alcohol Product Mfg</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Bldg Matl/Garden Equip &amp; Sup Dealers</fullName>
                </value>
                <value>
                    <fullName>Boiler/ Tank &amp; Shipping Containers</fullName>
                </value>
                <value>
                    <fullName>Broadcasting &amp; Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Business / Personal Support Svcs</fullName>
                </value>
                <value>
                    <fullName>Chemical</fullName>
                </value>
                <value>
                    <fullName>Chemical &amp; Allied Products</fullName>
                </value>
                <value>
                    <fullName>Clothing &amp; Clothing Accessories Stores</fullName>
                </value>
                <value>
                    <fullName>Coating/Engraving/Heat Treat&amp;Allied Act</fullName>
                </value>
                <value>
                    <fullName>Commercial &amp; Svc Industry Machinery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPublic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Announced_to_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>After joining, this will be marked to true when this new membership is announced to the portal.</description>
        <label>Announced to Portal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_CA_Can_Edit_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For use on Portal</inlineHelpText>
        <label>CA Can Edit Profile?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Youth_Internship__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>In the member&apos;s opinion is this organization willing to offer a youth internship?</inlineHelpText>
        <label>Youth Internship?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>President</fullName>
                </value>
                <value>
                    <fullName>Chairman of the Board</fullName>
                </value>
                <value>
                    <fullName>Chief Executive Officer</fullName>
                </value>
                <value>
                    <fullName>Managing Director</fullName>
                </value>
                <value>
                    <fullName>Managing Partner</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MultiSelectPicklists_Text__c</fullName>
        <label>MultiSelectPicklists(Text)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_Type__c</fullName>
        <label>Organization Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private for Profit</fullName>
                </value>
                <value>
                    <fullName>Private Non-Profit Company</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Preparatory</fullName>
                </value>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>University/College</fullName>
                </value>
                <value>
                    <fullName>Graduate School</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Leaving_Other__c</fullName>
        <inlineHelpText>Reason left YPO org is &apos;Other&apos;.  Explanation here.</inlineHelpText>
        <label>Reason Leaving Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Leaving__c</fullName>
        <label>Reason for Leaving</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Expelled</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
                <value>
                    <fullName>Failure to Pay and Recertify</fullName>
                </value>
                <value>
                    <fullName>Failure to pay dues</fullName>
                </value>
                <value>
                    <fullName>Failure to Recertify</fullName>
                </value>
                <value>
                    <fullName>Graduate</fullName>
                </value>
                <value>
                    <fullName>Joined Network out of curiosity/just browsing</fullName>
                </value>
                <value>
                    <fullName>Network content not what was expected</fullName>
                </value>
                <value>
                    <fullName>Network no longer relevant to my industry/interest</fullName>
                </value>
                <value>
                    <fullName>Not receiving value from the Network</fullName>
                </value>
                <value>
                    <fullName>Resigned</fullName>
                </value>
                <value>
                    <fullName>Time</fullName>
                </value>
                <value>
                    <fullName>Too many Network emails</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Transitioned</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Voluntary</fullName>
                </value>
                <value>
                    <fullName>Resigned from Chapter</fullName>
                </value>
                <value>
                    <fullName>Resigned from YPO</fullName>
                </value>
                <value>
                    <fullName>Transfer to another Forum</fullName>
                </value>
                <value>
                    <fullName>Transitioned to YPO Gold</fullName>
                </value>
                <value>
                    <fullName>Term end(ed)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employment</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope_of_Business__c</fullName>
        <label>Scope of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_OBM__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>If set to today this will trigger the outbound message to exchange to be sent</description>
        <label>Send OBM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Date joined organization</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State/Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tenure__c</fullName>
        <formula>IF(ISBLANK(End_Date__c), 
   ((MONTH(TODAY()) - MONTH(Start_Date__c)) + ((YEAR(TODAY()) - YEAR(Start_Date__c)) * 12)) / 12,
   ((MONTH(End_Date__c) - MONTH(Start_Date__c)) + ((YEAR(End_Date__c) - YEAR(Start_Date__c)) * 12)) / 12
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tenure</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title_Other__c</fullName>
        <label>Title Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tradeshow_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the lookup to the Company with which the member is attending this Tradeshow</inlineHelpText>
        <label>Tradeshow Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Affiliations (Tradeshow Company)</relationshipLabel>
        <relationshipName>Tradeshow_Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transfer_Flag__c</fullName>
        <label>Transfer Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Renewal Transition</fullName>
                </value>
                <value>
                    <fullName>Off-Cycle Transition</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT(Account__r.Type )</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Account Affiliation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Record_Type_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Account_Record_Type_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ApprAtLarge</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Type__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Business_Role__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Chapter</value>
        </filters>
        <filters>
            <field>Transfer_Flag__c</field>
            <operation>equals</operation>
            <value>Renewal Transition,Off-Cycle Transition,Transfer</value>
        </filters>
        <filters>
            <field>Chapter_Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>at large</value>
        </filters>
        <filters>
            <field>Contact_Type__c</field>
            <operation>equals</operation>
            <value>Member</value>
        </filters>
        <label>Approve Transitions for At Large Chapter</label>
    </listViews>
    <listViews>
        <fullName>ApprAtmisc</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Type__c</columns>
        <columns>Transfer_Flag__c</columns>
        <columns>Chapter_Approval_Status__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Chapter</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>french</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Approve Transitions for misc chapter</label>
    </listViews>
    <listViews>
        <fullName>Benefits</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account_Affiliation__c.Benefit</value>
        </filters>
        <label>Benefits</label>
    </listViews>
    <listViews>
        <fullName>Bus_Acct_Aff</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Type__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Business_Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account_Affiliation__c.Business</value>
        </filters>
        <label>Business - Account Affiliations</label>
    </listViews>
    <listViews>
        <fullName>Chpt_Act_Acct_Aff</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Type__c</columns>
        <columns>IsActive__c</columns>
        <columns>Is_Primary__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Chapter</value>
        </filters>
        <label>Chapters -  Active Account Affiliations</label>
    </listViews>
    <listViews>
        <fullName>Comm_Act_Acct_Aff</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Event</value>
        </filters>
        <filters>
            <field>Account_Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Committee</value>
        </filters>
        <label>Committees -  Active Event only</label>
    </listViews>
    <listViews>
        <fullName>Comm_Non_Event_Acct_Aff</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>notEqual</operation>
            <value>Event</value>
        </filters>
        <filters>
            <field>Account_Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Committee</value>
        </filters>
        <label>Committees -  Active Non-Event only</label>
    </listViews>
    <listViews>
        <fullName>Forum_Act_Acct_Aff</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>notEqual</operation>
            <value>Event</value>
        </filters>
        <filters>
            <field>Account_Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Forum</value>
        </filters>
        <label>Forum -  Active Account Affiliations</label>
    </listViews>
    <listViews>
        <fullName>Network_Act_Acct_Aff</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Account_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Network</value>
        </filters>
        <label>Network -  Active Account Affiliations</label>
    </listViews>
    <listViews>
        <fullName>School_Acct_Aff</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Type__c</columns>
        <columns>Degree_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>School</value>
        </filters>
        <label>Schools - Account Affiliation</label>
    </listViews>
    <listViews>
        <fullName>Tradeshows_Acct_Aff</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Type__c</columns>
        <columns>Degree_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Tradeshow</value>
        </filters>
        <label>Tradeshows -  Account Affiliations</label>
    </listViews>
    <listViews>
        <fullName>Transpendapp</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Type__c</columns>
        <columns>Business_Role__c</columns>
        <columns>Transfer_Flag__c</columns>
        <columns>Chapter_Approval_Status__c</columns>
        <columns>Contact_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transfer_Flag__c</field>
            <operation>equals</operation>
            <value>Renewal Transition,Off-Cycle Transition,Transfer</value>
        </filters>
        <filters>
            <field>Chapter_Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending,Rejected</value>
        </filters>
        <filters>
            <field>Contact_Type__c</field>
            <operation>notEqual</operation>
            <value>Spouse/Partner,Child</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notEqual</operation>
            <value>Exchange Test</value>
        </filters>
        <label>Transitions Pending Chapter Approval</label>
    </listViews>
    <nameField>
        <displayFormat>AA-{0000}</displayFormat>
        <label>Account Affiliation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Affiliations</pluralLabel>
    <recordTypes>
        <fullName>Benefit</fullName>
        <active>true</active>
        <label>Benefit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business</fullName>
        <active>true</active>
        <description>Relate an Individual and a Business</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>Chapter</fullName>
        <active>true</active>
        <description>Relate an Individual and a Chapter</description>
        <label>Chapter</label>
    </recordTypes>
    <recordTypes>
        <fullName>Committee</fullName>
        <active>true</active>
        <description>Relate an Individual and a Committee</description>
        <label>Committee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Forum</fullName>
        <active>true</active>
        <description>Relate an Individual and a Forum</description>
        <label>Forum</label>
    </recordTypes>
    <recordTypes>
        <fullName>Household</fullName>
        <active>false</active>
        <label>Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>Network</fullName>
        <active>true</active>
        <description>Relate an Individual and a Network</description>
        <label>Network</label>
    </recordTypes>
    <recordTypes>
        <fullName>School</fullName>
        <active>true</active>
        <description>Relate an Individual and a School</description>
        <label>School</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tradeshow</fullName>
        <active>true</active>
        <description>Relate an Individual and a Tradeshow</description>
        <label>Tradeshow</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Doesnot_allow_Account_Affliation</fullName>
        <active>false</active>
        <description>Stop a member having a new Account Affiliation to a YPO Community if either Disciplinary Action on Contact or Is_Expelled__c on Account Affiliation is populated.</description>
        <errorConditionFormula>AND(Contact__r.Disciplinary_Action_s__c = True  ||   ISPICKVAL(Reason_for_Leaving__c,&quot;Expelled&quot;), Account__r.RecordType.Name = &apos;YPO Community&apos;)</errorConditionFormula>
        <errorMessage>A new Account Affliation cannot be created for a YPO Community member if disciplinary actions are taken on him, or he is expelled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_Required_If_Not_Active</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
 AND(
   OR(
      RecordType.DeveloperName=&quot;Network&quot;,
      RecordType.DeveloperName=&quot;Forum&quot;,
      RecordType.DeveloperName=&quot;Committee&quot;
   ), 
   IsActive__c = FALSE,
   NOT(ISBLANK(Start_Date__c)),
   ISBLANK(End_Date__c)
  ),

 AND(
    RecordType.DeveloperName=&quot;Chapter&quot;,
    IsActive__c = FALSE,
    NOT(ISBLANK(Start_Date__c)),
    OR(
      NOT(ISPICKVAL( Contact__r.Membership_Status__c,&apos;Prospect&apos;)),
      NOT(ISPICKVAL( Contact__r.Membership_Status__c,&apos;BLANK&apos;))
    ),
    ISPICKVAL(Transfer_Flag__c, &quot;&quot;),
    ISBLANK(End_Date__c)

 )
)</errorConditionFormula>
        <errorMessage>End Date is required for Networks, Forums, Committees, and Chapters that are not Active.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enforce_Reason_left_Population</fullName>
        <active>false</active>
        <description>If End_Date__c is populated on Account_Affiliation__c that the reason is given in Reason_Left__c.</description>
        <errorConditionFormula>OR(NOT(ISPICKVAL(Account__r.Type, &apos;Committee&apos;)) ,
NOT(ISPICKVAL(Account__r.Type, &apos;Tradeshow&apos;)))
&amp;&amp; (ISPICKVAL(Reason_for_Leaving__c,&apos;&apos;) 
&amp;&amp; NOT( ISBLANK(End_Date__c) ))
&amp;&amp; NOT(ISPICKVAL( Transfer_Flag__c ,&quot;Renewal Transition&quot;)
&amp;&amp; NOT(ISPICKVAL( Transfer_Flag__c ,&quot;Transfer&quot;)
&amp;&amp; NOT(ISPICKVAL( Transfer_Flag__c ,&quot;Off-Cycle Transition&quot;)
)
)
)</errorConditionFormula>
        <errorDisplayField>Reason_for_Leaving__c</errorDisplayField>
        <errorMessage>Please fill the Reason for Leaving.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Indicate_a_reason_for_leaving_other</fullName>
        <active>true</active>
        <description>If Reason for Leaving is marked &apos;other&apos;, must provide reason for leaving other text.</description>
        <errorConditionFormula>AND( 
ISPICKVAL(Reason_for_Leaving__c, &apos;Other&apos;),
ISBLANK( Reason_Leaving_Other__c ))</errorConditionFormula>
        <errorMessage>If reason for leaving is &apos;other&apos;, you must populate the reason for leaving other text box.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Member_to_Member_or_Mixed_Network</fullName>
        <active>false</active>
        <description>Stop a user in assigning a Member Contact to account other then Member or Network category</description>
        <errorConditionFormula>IF( AND(Contact__r.RecordType.Name = &apos;Member&apos;, ISPICKVAL(Account__r.Type,&apos;Network&apos;)), IF(OR( ISPICKVAL(Account__r.Category__c,&apos;Member&apos;), ISPICKVAL(Account__r.Category__c,&apos;Mixed&apos;)),FALSE,TRUE), FALSE)</errorConditionFormula>
        <errorMessage>A Member Contact can be associated to a Member or Mixed Category network Account only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_Indicate_a_Reason_for_Leaving</fullName>
        <active>true</active>
        <description>Reason for Leaving is required for Networks, Forums, and Chapters</description>
        <errorConditionFormula>AND(
 OR(
   RecordType.DeveloperName=&quot;Network&quot;,
   RecordType.DeveloperName=&quot;Forum&quot;,
   RecordType.DeveloperName=&quot;Chapter&quot;
 ),
 NOT(ISBLANK(End_Date__c)),
 ISPICKVAL(Reason_for_Leaving__c, &apos;&apos;)
)</errorConditionFormula>
        <errorMessage>Reason for Leaving is required for Networks, Forums, and Chapters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Inactive_chapter_as_primary</fullName>
        <active>false</active>
        <description>validation put around Chapter Account Affiliations so that &quot;Primary&quot; can only be checked if &quot;Active&quot; is checked</description>
        <errorConditionFormula>AND(
ISCHANGED(Is_Primary__c),
Is_Primary__c = TRUE,
IsActive__c = FALSE
)</errorConditionFormula>
        <errorMessage>You can not select inactive chapter as primary</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_chapter_as_Primary</fullName>
        <active>false</active>
        <description>validation put around Chapter Account Affiliations so that  prevented from marking a chapter as Primary if the start date is in the past and the end date is either blank or in the future and the Active flag isn&apos;t checked.</description>
        <errorConditionFormula>AND(
Is_Primary__c = TRUE,
IsActive__c = False, 
Start_Date__c &lt; Today(),
OR(
ISBLANK(End_Date__c),
End_Date__c &gt; Today()
))</errorConditionFormula>
        <errorMessage>You can not make chapter Primary if the start date is in the past and the end date is either blank or in the future and the Active flag is not  checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_chapter_as_active</fullName>
        <active>true</active>
        <description>validation put around Chapter Account Affiliations so that  able to mark a chapter as Primary, but not active if the start and end dates are in the past.</description>
        <errorConditionFormula>AND(
Is_Primary__c = TRUE,
IsActive__c = TRUE, 
Start_Date__c &lt; Today(),
End_Date__c &lt; Today(), 
RecordType.Name &lt;&gt; &quot;Business&quot; 
)</errorConditionFormula>
        <errorMessage>You can not make chapter active if the start and end dates are in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Record_type_Match_between_Acc_and_Accaff</fullName>
        <active>false</active>
        <description>This validation around Account Affiliation record type so throws an error if the Account Affiliation record type doesn&apos;t match the Account record type. &apos;Network&apos; Record type exception when  &apos;Chapter/Network Exception&apos; checkbox is checked on Account. 02897</description>
        <errorConditionFormula>OR(
AND( 
Account__r.RecordType.DeveloperName &lt;&gt; RecordType.Name ,  
RecordType.DeveloperName  = &apos;Chapter&apos;, 
Account__r.Chapter_Network_Exception__c = False), 
AND(
Account__r.RecordType.DeveloperName &lt;&gt; RecordType.Name , 
RecordType.DeveloperName   &lt;&gt;  &apos;Chapter&apos;
)
)</errorConditionFormula>
        <errorMessage>The account record type of the account chosen does not match the type of affiliation. Please select  record type that matches with Account record type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Title_Other_Field</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
ISPICKVAL( Job_Title__c , &apos;Other&apos;),
ISBLANK(Title_Other__c))</errorConditionFormula>
        <errorMessage>If &apos;Title&apos; equals &apos;Other&apos;, please provide a title in the &apos;Title Other&apos; text box.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Spouse_to_Spouse_or_Mixed_Network</fullName>
        <active>false</active>
        <description>Stop a user in assigning a Spouse/Partner Contact to account other than Spouse or Network category</description>
        <errorConditionFormula>IF( AND(Contact__r.RecordType.Name = &apos;Spouse/Partner&apos;, ISPICKVAL(Account__r.Type,&apos;Network&apos;)), IF(OR( ISPICKVAL(Account__r.Category__c,&apos;Spouse/Partner&apos;), ISPICKVAL(Account__r.Category__c,&apos;Mixed&apos;)), False, True),False)</errorConditionFormula>
        <errorMessage>A Spouse/Partner Contact can be associated to a Spouse/Partner or Mixed Category network Account only.</errorMessage>
    </validationRules>
</CustomObject>